Fix points on rotate